--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/fontawesome-free-5.12.1-web/css/all.css">
     <link rel="stylesheet" href="/fontawesome-free-5.12.1-web/css/all.min.css">
+    <script src="https://kit.fontawesome.com/aeb5aee0d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
