--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/fontawesome-free-5.12.1-web/css/all.min.css">
     <script src="https://kit.fontawesome.com/aeb5aee0d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>My Web Page</title>
 </head>
 
 <body>
